--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": " ",
   "dependencies": {
     "express": "^4.10.6",
+    "geoip-lite": "^1.1.5",
     "geolib": "^2.0.14",
     "request": "^2.51.0"
   }
